tests/errors/array_04.f90
subroutine sub()
    integer :: w(*)
end subroutine

program array_04
    call sub()
end program
